Generate proper dataloads per year for DOAB

--- a/backend/tsosi/data/preparation/doab/run_data_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/run_data_2024.ipynb
@@ -881,7 +881,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 4.bis - Filter date\n"
+        "### 4.bis - Create yearly datasets\n"
       ]
     },
     {
@@ -890,23 +890,55 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "import sys\n",
+        "import os\n",
         "from pathlib import Path\n",
+        "from datetime import date\n",
         "import pandas as pd\n",
         "\n",
-        "folder = Path.home() / \"Nextcloud/TSOSI_data/doab/4_prepared\"\n",
-        "filter_date = pd.to_datetime(f\"2020-12-31\", format=\"%Y-%m-%d\")\n",
-        "file = \"2025-02-11-DOAB_Library_Report_prepared.xlsx\"\n",
-        "output_file = \"2025-02-11-DOAB_Library_Report_prepared_starting_2021.xlsx\"\n",
+        "# Add the parent directory to the system path and setup django\n",
+        "BASE_DIR = Path(os.getcwd()).resolve().parent.parent.parent.parent\n",
         "\n",
-        "df = pd.read_excel(str(folder / file))\n",
+        "folder = BASE_DIR / \"_no_git/fixtures/doab/4_prepared\"\n",
+        "files_to_split = [\n",
+        "    \"2025-02-11_DOAB_Library_Report_prepared.xlsx\",\n",
+        "    \"2025-02-11_DOAB_Sponsorship_Report_prepared.xlsx\",\n",
+        "]\n",
+        "file = \"2025-02-11_DOAB_Library_Report_prepared.xlsx\"\n",
+        "output_file = \"2025-02-11_DOAB_Library_Report_prepared_{year}.xlsx\"\n",
         "\n",
-        "df = df[df[\"date_start\"] > filter_date]\n",
+        "for f_name in files_to_split:\n",
+        "    df = pd.read_excel(str(folder / f_name))\n",
         "\n",
-        "date_cols = [\"date_start\", \"date_end\"]\n",
-        "for c in date_cols:\n",
-        "    df[c] = df[c].dt.date\n",
+        "    min_year = df[\"date_start\"].min().year\n",
+        "    max_year = min(df[\"date_start\"].max().year, date.today().year) + 1\n",
+        "    years = range(min_year, max_year)\n",
         "\n",
-        "df.to_excel(str(folder / output_file), sheet_name=\"Transfers\", index=False)"
+        "    print(f\"Splitting file {f_name} in year range [ {min_year}, {max_year} ].\")\n",
+        "    print(f\"Total base data rows: {len(df)}\")\n",
+        "\n",
+        "    output_file = f_name.split(\".\")[0] + \"_{year}.\" + f_name.split(\".\")[-1]\n",
+        "    total = 0\n",
+        "    for year in years:\n",
+        "        min_date = pd.to_datetime(f\"{year - 1}-12-31\", format=\"%Y-%m-%d\")\n",
+        "        max_date = pd.to_datetime(f\"{year + 1}-01-01\", format=\"%Y-%m-%d\")\n",
+        "        mask = (df[\"date_start\"] > min_date) & (df[\"date_start\"] < max_date)\n",
+        "        df_year = df[mask].copy()\n",
+        "        if df_year.empty:\n",
+        "            continue\n",
+        "        total += len(df_year)\n",
+        "        output_file_year = output_file.format(year=year)\n",
+        "        print(\n",
+        "            f\"Writing { len(df_year) } rows for year {year} to file {output_file_year}\"\n",
+        "        )\n",
+        "        date_cols = [\"date_start\", \"date_end\"]\n",
+        "        for c in date_cols:\n",
+        "            df_year[c] = df_year[c].dt.date\n",
+        "        df_year.to_excel(\n",
+        "            str(folder / output_file_year), sheet_name=\"Transfers\", index=False\n",
+        "        )\n",
+        "    print(f\"Total split data rows: {total}\")\n",
+        "    print(\"\\n\")"
       ]
     },
     {
@@ -929,10 +961,10 @@
         "from datetime import date\n",
         "\n",
         "# Add the parent directory to the system path and setup django\n",
-        "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+        "BASE_DIR = Path(os.getcwd()).resolve().parent.parent.parent.parent\n",
         "\n",
-        "if BASE_DIR not in sys.path:\n",
-        "    sys.path.append(BASE_DIR)\n",
+        "if str(BASE_DIR) not in sys.path:\n",
+        "    sys.path.append(str(BASE_DIR))\n",
         "\n",
         "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
         "\n",
@@ -942,29 +974,49 @@
         "from tsosi.data.preparation.doab.sponsors import get_config as config_sponsors\n",
         "\n",
         "date_data = date(2025, 2, 11)\n",
+        "input_folder = BASE_DIR / \"_no_git/fixtures/doab/4_prepared\"\n",
+        "output_folder = BASE_DIR / \"_no_git/fixtures/doab/_exports\"\n",
+        "\n",
         "# Libraries\n",
-        "file_path = (\n",
-        "    Path.home()\n",
-        "    / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Library_Report_prepared_starting_2021.xlsx\"\n",
-        ")\n",
+        "base_file = \"2025-02-11_DOAB_Library_Report_prepared_{year}.xlsx\"\n",
         "sheet_name = \"Transfers\"\n",
-        "config = config_libraries(str(file_path), sheet_name, date_data)\n",
-        "config.generate_data_file()\n",
+        "years = [\n",
+        "    (2021, True),\n",
+        "    (2022, True),\n",
+        "    (2023, True),\n",
+        "    (2024, True),\n",
+        "    (2025, False),\n",
+        "]\n",
+        "for year, full in years:\n",
+        "    file = base_file.format(year=year)\n",
+        "    config = config_libraries(\n",
+        "        str(input_folder / file), sheet_name, year, full, date_data\n",
+        "    )\n",
+        "    config.generate_data_file(output_folder=output_folder)\n",
         "\n",
         "# Sponsors\n",
-        "file_path = (\n",
-        "    Path.home()\n",
-        "    / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Sponsorship_Report_prepared.xlsx\"\n",
-        ")\n",
         "sheet_name = \"Transfers\"\n",
-        "config = config_sponsors(str(file_path), sheet_name, date_data)\n",
-        "config.generate_data_file()"
+        "base_file = \"2025-02-11_DOAB_Sponsorship_Report_prepared_{year}.xlsx\"\n",
+        "sheet_name = \"Transfers\"\n",
+        "years = [\n",
+        "    (2021, True),\n",
+        "    (2022, True),\n",
+        "    (2023, True),\n",
+        "    (2024, True),\n",
+        "    (2025, False),\n",
+        "]\n",
+        "for year, full in years:\n",
+        "    file = base_file.format(year=year)\n",
+        "    config = config_sponsors(\n",
+        "        str(input_folder / file), sheet_name, year, full, date_data\n",
+        "    )\n",
+        "    config.generate_data_file(output_folder=output_folder)"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "tsosi-backend-py3.12",
       "language": "python",
       "name": "python3"
     },
@@ -978,7 +1030,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.12.10"
     }
   },
   "nbformat": 4,
