Add notebook to extract all transfers in the data-collection-schema format

--- a/backend/tsosi/data/preparation/scipost/run.ipynb
+++ b/backend/tsosi/data/preparation/scipost/run.ipynb
@@ -218,9 +218,9 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from backend.tsosi.data.preparation.scipost.configs import get_file_config\n",
+    "from tsosi.data.preparation.scipost.configs import get_file_config\n",
     "\n",
-    "date_data = date(2025, 6, 24)\n",
+    "date_data = date(2025, 7, 28)\n",
     "date_str = date_data.strftime(\"%Y-%m-%d\")\n",
     "file_path = (\n",
     "    BASE_DIR\n",
