--- a/backend/tsosi/dump_transfers.ipynb
+++ b/backend/tsosi/dump_transfers.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5a339b36",
    "metadata": {},
    "outputs": [],
@@ -172,6 +172,91 @@
     "    del extract[infra_col]\n",
     "    file_name = f\"{date_str}_TSOSI_{infra.replace(\" \", \"_\")}_transfers.xlsx\"\n",
     "    extract.to_excel(str(folder / file_name), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af93ee18",
+   "metadata": {},
+   "source": [
+    "## Trash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e5f47a3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import os\n",
+    "import django\n",
+    "from asgiref.sync import sync_to_async\n",
+    "\n",
+    "# Add the parent directory to the system path and setup django\n",
+    "BASE_DIR = Path(os.getcwd()).resolve().parent\n",
+    "\n",
+    "if str(BASE_DIR) not in sys.path:\n",
+    "    sys.path.append(str(BASE_DIR))\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+    "\n",
+    "django.setup()\n",
+    "\n",
+    "from tsosi.models import Transfer, Entity, Identifier\n",
+    "from tsosi.models.date import Date\n",
+    "import pandas as pd\n",
+    "from django.db.models import F\n",
+    "from tsosi.data.enrichment.database_related import entities_with_identifier_data\n",
+    "\n",
+    "\n",
+    "@sync_to_async\n",
+    "def to_run():\n",
+    "    # data = entities_with_identifier_data()\n",
+    "    identifiers = Identifier.objects.filter(\n",
+    "        entity__isnull=False, current_version__isnull=False\n",
+    "    ).values(\n",
+    "        \"registry_id\",\n",
+    "        \"entity_id\",\n",
+    "        \"value\",\n",
+    "        record=F(\"current_version__value\"),\n",
+    "    )\n",
+    "    data = pd.DataFrame.from_records(identifiers)\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "res = await to_run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5dfe15a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Q126050081'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# res[\"id\"] = res[\"id\"].apply(str)\n",
+    "# res[res[\"id\"] == \"b2cc0596-ce90-498a-aedc-ee1f07ef0deb\"].to_dict()\n",
+    "from tsosi.data.pid_registry.ror import get_ror_wikidata_id\n",
+    "\n",
+    "vers = res[res[\"value\"] == \"015m7wh34\"]\n",
+    "\n",
+    "data = vers[\"record\"].iloc[0]\n",
+    "get_ror_wikidata_id(data)\n",
+    "# data"
    ]
   }
  ],
